1.14 & 1.2, 09.05.2021
- Bug fix regarding mins and maxs in ml_check.pl
- Caching added
1.13 & 1.2, 03.05.2021
- Make ml_tex.pl also produce code for tableaux.
- Update ml.tex: more current introduction, use modern packages, load
  hyperref, updated bibliography with links, add section on tableaux,
  add detail on completeness results and resolution.
- Update dialog text of iLC.
- Increase limit on name of logic to 40 chars.
1.12, 20.10.2020:
- Update the install script to install into ~/.local if not run as root, and 
  to put documentation into /usr/share/doc by default. Update README to reflect
  what's changed in the world in the last 20 years. Remove a bad character that
  caused a compile error from ml.bib (rzach)
1.11, 4.12.2014:
- "set_prolog_flag(double_quotes, codes)" added to ml_tex.pl, ml_lgc.pl
  and ml_check.pl. Necessary for SWI-Prolog version 7 and higher since
  now quoted strings no longer are code lists. Other Prolog systems
  or older versions of SWI-Prolog might complain about this directive.

1.10, 11.7.2001:
- Bug fix in ml_compactrepr.pl that made 1.09 unusable.
- Bug fix in installation script regarding lgc2pdf
- Installation/Deinstallation scripts changed
1.09:
- New implementation of propositional minimization routines.
- Script "lgc2pdf" added for direct generation of PDF paper.
1.08:
- Minimization of operators (propres.pl) replaced by a more stable
  algorithm (hopefully).
1.07:
- Bug: Operators defined as supremum or infimum wrt. an ordering
  were always assumed to be binary, regardless of the specified arity
  (reported by Chris Fermueller).
1.06:
- installation script improved: support for adding Prolog options,
  version number and date in separate file "Version"
- deinstallation script added