@@ -12,6 +12,7 @@ DVIPS='@dvips@'
 PS2PDF='@ps2pdf@'
 RM='@rm@'
 SED='@sed@'
+AWK='@awk@'
 
 LTX='@ltx@'
 LTXPDF='@ltxpdf@'
@@ -71,7 +72,7 @@ done
 
 if [ ! -f $file.cfg ]
 then
-   $CP $MLPATH/ml.cfg $file.cfg
+   $AWK '/^%/||/^ *$/{next}{print}' $MLPATH/ml.cfg > $file.cfg
 fi
 
 $PROLOG -s "$MLPATH/ml" -g "lgc2tex('$file.lgc','$file.sty','$file.cfg'), halt." 2>>$logfile
@@ -111,7 +112,7 @@ then
     echo "Cleaning up ..."
     delfiles="$logfile"
     delfiles="$delfiles $file.aux $file.log $file.out $file.bbl $file.blg $file.dvi $file.ps"
-    delfiles="$delfiles $file.sty $file.tex ml.sty ml.bib proof.sty"
+    delfiles="$delfiles $file.sty $file.tex ml.sty ml.bib proof.sty $file.lgc.stripped"
     for f in $delfiles
     do
       if [ -f $f ]
