@@ -1,20 +1,10 @@
-%%% Filename : ml.tex
-%%% Date     : 13.1.1997
-%%% Contents : Main file of TeX paper
-%%% Author   : Gernot Salzer
-%%%
-%%% ***
-%%% Upgrade  : Wolfram Nix
-%%% Date     : ??.11.1997
-%%%            preliminaries, lots of definitions, theorems etc added.
-%%% ***
-%%% Upgrade  : Richard Zach
-%%% Date:    : 31.10.2020
-%%%            Bring this into the 21st century!
-%%%            Also, add tableaux
+%%% ml.tex, main file of TeX paper
+%%% 13. 1.1997, Gernot Salzer: initial version
+%%% ??.11.1997, Wolfram Nix: preliminaries, lots of definitions, theorems etc added.
+%%% 31.10.2020, Richard Zach: Bring this into the 21st century! Also, add tableaux
+%%%  9. 5.2021, Gernot Salzer: appendix with specification of logic
 
 \documentclass{article}
-
 \usepackage{latexsym}
 \usepackage{amsfonts,amssymb}
 \usepackage{mathrsfs}
@@ -25,6 +15,7 @@
 \usepackage{numname}
 \usepackage{proof}
 \usepackage{ifthen}
+\usepackage{listings}
 
 \usepackage[numbers,longnamesfirst]{natbib}
 \usepackage{doi}
@@ -147,9 +138,8 @@ ClQuprem\romannumeral#1X\romannumeral#2\endcsname}
 \title{Analytic Proof Systems for \ecapitalisewords{\NameOfLogic}
 Logic}
 
-\author{M.~Ultlog\thanks{Generated from the truth tables of
-\NameOfLogic\ logic by
-\href{https://github.com/rzach/multlog}{\textsc{multlog}}, v.~@ml_version@.}}
+\author{M.~Ultlog\thanks{Generated by \href{https://github.com/rzach/multlog}{\textsc{multlog}},
+v.~@ml_version@ from the specification of \NameOfLogic\ logic in the appendix.}}
 \date{}
 
 \makeatletter
@@ -1138,11 +1128,20 @@ $T(\C)$ contains only signed atoms%
    has a resolution refutation.
 \end{corollary}
 
-
 \nocite{*}
 \IfFileExists{\jobname.bib}
    {\nocite{ml}\bibliography{ml,\jobname}}
    {\bibliography{ml}}
+
+\appendix
+
+\section{\jobname.lgc~-- specification of \NameOfLogic\ logic}
+\lstinputlisting[basicstyle=\footnotesize\ttfamily,breaklines]{\jobname.lgc.stripped}
+
+\IfFileExists{\jobname.cfg}{%
+  \section{\jobname.cfg~-- \LaTeX\ translations}
+  \lstinputlisting[basicstyle=\footnotesize\ttfamily,breaklines]{\jobname.cfg}
+}{}
 
 \end{document}
 
